2.2.5/_sources/gallery/userdemo/demo_gridspec05.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_userdemo_demo_gridspec05.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_userdemo_demo_gridspec05.py:


===============
Demo Gridspec05
===============



.. image:: /gallery/userdemo/images/sphx_glr_demo_gridspec05_001.png
    :class: sphx-glr-single-img






.. code-block:: default

    import matplotlib.pyplot as plt
    import matplotlib.gridspec as gridspec


    def make_ticklabels_invisible(fig):
        for i, ax in enumerate(fig.axes):
            ax.text(0.5, 0.5, "ax%d" % (i+1), va="center", ha="center")
            ax.tick_params(labelbottom=False, labelleft=False)


    f = plt.figure()

    gs = gridspec.GridSpec(2, 2,
                           width_ratios=[1, 2], height_ratios=[4, 1])

    ax1 = plt.subplot(gs[0])
    ax2 = plt.subplot(gs[1])
    ax3 = plt.subplot(gs[2])
    ax4 = plt.subplot(gs[3])

    make_ticklabels_invisible(f)
    plt.show()


.. _sphx_glr_download_gallery_userdemo_demo_gridspec05.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: demo_gridspec05.py <demo_gridspec05.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: demo_gridspec05.ipynb <demo_gridspec05.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
